添加评论系统

--- a/index_files/archive-september-2020.html
+++ b/index_files/archive-september-2020.html
@@ -30,17 +30,17 @@
 	<meta property="og:url" content="https:/bingcheng.openmc.cn/notes/index_files/archive-september-2020.html"><!-- User defined head content such as meta tags and encoding options -->
 	<title>Archives for September 2020 | Notes | JAZZ UP</title>
 	
-	<link rel="stylesheet" type="text/css" media="all" href="../rw_common/themes/lander/consolidated-0.css?rwcache=622862307" />
+	<link rel="stylesheet" type="text/css" media="all" href="../rw_common/themes/lander/consolidated-0.css?rwcache=622862627" />
 		
 	
 	
 	<!-- Style variations - these are set up in the theme.plist -->
 	<!-- User defined styles -->
 			
-	 <script type="text/javascript" src="../rw_common/themes/lander/js/jquery.min.js?rwcache=622862307"></script>	  
-     <script type="text/javascript" src="../rw_common/themes/lander/javascript.js?rwcache=622862307"></script>
-	 <script type="text/javascript" src="../rw_common/themes/lander/js/box.js?rwcache=622862307"></script>
-	 <script type="text/javascript" src="../rw_common/themes/lander/js/multithemes.js?rwcache=622862307"></script> 
+	 <script type="text/javascript" src="../rw_common/themes/lander/js/jquery.min.js?rwcache=622862627"></script>	  
+     <script type="text/javascript" src="../rw_common/themes/lander/javascript.js?rwcache=622862627"></script>
+	 <script type="text/javascript" src="../rw_common/themes/lander/js/box.js?rwcache=622862627"></script>
+	 <script type="text/javascript" src="../rw_common/themes/lander/js/multithemes.js?rwcache=622862627"></script> 
 	 
 	<!-- User defined javascript -->
 	<link rel="alternate" type="application/rss+xml" title="Bingcheng's Notes" href="https://bingcheng.openmc.cn/notes/index_files/feed.xml" />
@@ -93,9 +93,22 @@
 	</div>
 	
 	<div class="blog-archive-entries-wrapper">
-		<div id="unique-entry-id-0" class="blog-entry"><h1 class="blog-entry-title"><a href="Bias-regularization.html" class="blog-permalink">Bias regularization</a></h1><div class="blog-entry-date">27/09/20 08:32 </div><div class="blog-entry-body">It is not common to regularize the bias parameters because they do not interact with the data through multiplicative interactions, and therefore do not have the interpretation of controlling the influence of a data dimension on the final objective.<span class="blog-read-more"><a href="Bias-regularization.html"> Read More…</a></span></div></div>
+		<div id="unique-entry-id-0" class="blog-entry"><h1 class="blog-entry-title"><a href="Bias-regularization.html" class="blog-permalink">Bias regularization</a></h1><div class="blog-entry-date">27/09/20 08:32 </div><div class="blog-entry-body">It is not common to regularize the bias parameters because they do not interact with the data through multiplicative interactions, and therefore do not have the interpretation of controlling the influence of a data dimension on the final objective.<span class="blog-read-more"><a href="Bias-regularization.html"> Read More…</a></span><div class="blog-entry-comments"><a class="blog-comment-link" href="Bias-regularization.html#disqus_thread">Comments</a></div></div></div>
 	</div>
 	
+
+
+<script type="text/javascript">
+//<![CDATA[
+var disqus_shortname = 'Comments';
+(function() {
+	var s = document.createElement('script'); s.async = true;
+	s.type = 'text/javascript';
+	s.src = 'https://' + disqus_shortname + '.disqus.com/count.js';
+	(document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+	}());
+//]]>
+</script>
 
 		 </div><!-- End content -->
 	 </div><!-- End main content wrapper -->
