--- a/zh/index.html
+++ b/zh/index.html
@@ -27,17 +27,17 @@
 	<meta property="og:url" content="https://bingcheng.openmc.cn/notes/zh/index.html"><!-- User defined head content such as meta tags and encoding options -->
 	<title>笔记 | 记录灵感</title>
 	
-	<link rel="stylesheet" type="text/css" media="all" href="../rw_common/themes/lander/consolidated-1.css?rwcache=622861971" />
+	<link rel="stylesheet" type="text/css" media="all" href="../rw_common/themes/lander/consolidated-1.css?rwcache=622862627" />
 		
 	
 	
 	<!-- Style variations - these are set up in the theme.plist -->
 	<!-- User defined styles -->
 			
-	 <script type="text/javascript" src="../rw_common/themes/lander/js/jquery.min.js?rwcache=622861971"></script>	  
-     <script type="text/javascript" src="../rw_common/themes/lander/javascript.js?rwcache=622861971"></script>
-	 <script type="text/javascript" src="../rw_common/themes/lander/js/box.js?rwcache=622861971"></script>
-	 <script type="text/javascript" src="../rw_common/themes/lander/js/multithemes.js?rwcache=622861971"></script> 
+	 <script type="text/javascript" src="../rw_common/themes/lander/js/jquery.min.js?rwcache=622862627"></script>	  
+     <script type="text/javascript" src="../rw_common/themes/lander/javascript.js?rwcache=622862627"></script>
+	 <script type="text/javascript" src="../rw_common/themes/lander/js/box.js?rwcache=622862627"></script>
+	 <script type="text/javascript" src="../rw_common/themes/lander/js/multithemes.js?rwcache=622862627"></script> 
 	 
 	<!-- User defined javascript -->
 	<link rel="alternate" type="application/rss+xml" title="胡炳城的笔记" href="https://bingcheng.openmc.cn/notes/zh/files/feed.xml" />
@@ -83,7 +83,20 @@
  <div id="global_width">	 	
 	 <div id="contentContainer"><!-- Start main content wrapper -->
 		 <div id="content"><!-- Start content -->
-		   <div id="unique-entry-id-0" class="blog-entry"><h1 class="blog-entry-title"><a href="files/test-note.html" class="blog-permalink">测试笔记</a></h1><div class="blog-entry-date">27/09/20 08:34 </div><div class="blog-entry-body"><span style="font:12px PingFangSC-Regular; ">这是一条测试笔记</span><br /><br /><span style="font:12px PingFangSC-Regular; ">随便写点什么</span></div></div>
+		   <div id="unique-entry-id-0" class="blog-entry"><h1 class="blog-entry-title"><a href="files/test-note.html" class="blog-permalink">测试笔记</a></h1><div class="blog-entry-date">27/09/20 08:34 </div><div class="blog-entry-body"><span style="font:12px PingFangSC-Regular; ">这是一条测试笔记</span><br /><br /><span style="font:12px PingFangSC-Regular; ">随便写点什么</span><div class="blog-entry-comments"><a class="blog-comment-link" href="files/test-note.html#disqus_thread">Comments</a></div></div></div>
+
+<script type="text/javascript">
+//<![CDATA[
+var disqus_shortname = '我想说...';
+(function() {
+	var s = document.createElement('script'); s.async = true;
+	s.type = 'text/javascript';
+	s.src = 'https://' + disqus_shortname + '.disqus.com/count.js';
+	(document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+	}());
+//]]>
+</script>
+
 		 </div><!-- End content -->
 	 </div><!-- End main content wrapper -->
   <div id="sidebarBackground"></div>
