--- a/index_files/Bias-regularization.html
+++ b/index_files/Bias-regularization.html
@@ -30,17 +30,17 @@
 	<meta property="og:url" content="https:/bingcheng.openmc.cn/notes/index_files/Bias-regularization.html"><!-- User defined head content such as meta tags and encoding options -->
 	<title>Bias regularization | Notes | JAZZ UP</title>
 	
-	<link rel="stylesheet" type="text/css" media="all" href="../rw_common/themes/lander/consolidated-0.css?rwcache=622862627" />
+	<link rel="stylesheet" type="text/css" media="all" href="../rw_common/themes/lander/consolidated-0.css?rwcache=622865686" />
 		
 	
 	
 	<!-- Style variations - these are set up in the theme.plist -->
 	<!-- User defined styles -->
 			
-	 <script type="text/javascript" src="../rw_common/themes/lander/js/jquery.min.js?rwcache=622862627"></script>	  
-     <script type="text/javascript" src="../rw_common/themes/lander/javascript.js?rwcache=622862627"></script>
-	 <script type="text/javascript" src="../rw_common/themes/lander/js/box.js?rwcache=622862627"></script>
-	 <script type="text/javascript" src="../rw_common/themes/lander/js/multithemes.js?rwcache=622862627"></script> 
+	 <script type="text/javascript" src="../rw_common/themes/lander/js/jquery.min.js?rwcache=622865686"></script>	  
+     <script type="text/javascript" src="../rw_common/themes/lander/javascript.js?rwcache=622865686"></script>
+	 <script type="text/javascript" src="../rw_common/themes/lander/js/box.js?rwcache=622865686"></script>
+	 <script type="text/javascript" src="../rw_common/themes/lander/js/multithemes.js?rwcache=622865686"></script> 
 	 
 	<!-- User defined javascript -->
 	<link rel="alternate" type="application/rss+xml" title="Bingcheng's Notes" href="https://bingcheng.openmc.cn/notes/index_files/feed.xml" />
@@ -89,7 +89,7 @@
 		   	
 	<div class="blog-archive-entries-wrapper">
 		<div id="unique-entry-id-0" class="blog-entry"><h1 class="blog-entry-title">Bias regularization</h1><div class="blog-entry-date">27/09/20 08:32 </div><div class="blog-entry-summary">It is not common to regularize the bias parameters because they do not interact with the data through multiplicative interactions, and therefore do not have the interpretation of controlling the influence of a data dimension on the final objective.</div><div class="blog-entry-body"><span style="font:16px PingFangSC-Light; color:#000000;">Source: cs231n  </span><span style="font-size:16px; color:#000000;"><br /><br />As we already mentioned in the Linear Classification section, it is not common to regularize the bias parameters because they do not interact with the data through multiplicative interactions, and therefore do not have the interpretation of controlling the influence of a data dimension on the final objective. However, in practical applications (and with proper data preprocessing) regularizing the bias rarely leads to significantly worse performance. This is likely because there are very few bias terms compared to all the weights, so the classifier can &ldquo;afford to&rdquo; use the biases if it needs them to obtain a better data loss.</span><div class="blog-entry-comments"><div id="disqus_thread">
-<script type="text/javascript"> var disqus_shortname = 'Comments';
+<script type="text/javascript"> var disqus_shortname = 'Comme';
 (function() {
 	var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
 	var disqus_identifier = '6a197a4737484c2e62d17c9b5b7ffaff';
