--- a/index_files/archive-september-2020.html
+++ b/index_files/archive-september-2020.html
@@ -30,17 +30,17 @@
 	<meta property="og:url" content="https:/bingcheng.openmc.cn/notes/index_files/archive-september-2020.html"><!-- User defined head content such as meta tags and encoding options -->
 	<title>Archives for September 2020 | Notes | JAZZ UP</title>
 	
-	<link rel="stylesheet" type="text/css" media="all" href="../rw_common/themes/lander/consolidated-0.css?rwcache=622862627" />
+	<link rel="stylesheet" type="text/css" media="all" href="../rw_common/themes/lander/consolidated-0.css?rwcache=622865686" />
 		
 	
 	
 	<!-- Style variations - these are set up in the theme.plist -->
 	<!-- User defined styles -->
 			
-	 <script type="text/javascript" src="../rw_common/themes/lander/js/jquery.min.js?rwcache=622862627"></script>	  
-     <script type="text/javascript" src="../rw_common/themes/lander/javascript.js?rwcache=622862627"></script>
-	 <script type="text/javascript" src="../rw_common/themes/lander/js/box.js?rwcache=622862627"></script>
-	 <script type="text/javascript" src="../rw_common/themes/lander/js/multithemes.js?rwcache=622862627"></script> 
+	 <script type="text/javascript" src="../rw_common/themes/lander/js/jquery.min.js?rwcache=622865686"></script>	  
+     <script type="text/javascript" src="../rw_common/themes/lander/javascript.js?rwcache=622865686"></script>
+	 <script type="text/javascript" src="../rw_common/themes/lander/js/box.js?rwcache=622865686"></script>
+	 <script type="text/javascript" src="../rw_common/themes/lander/js/multithemes.js?rwcache=622865686"></script> 
 	 
 	<!-- User defined javascript -->
 	<link rel="alternate" type="application/rss+xml" title="Bingcheng's Notes" href="https://bingcheng.openmc.cn/notes/index_files/feed.xml" />
@@ -100,7 +100,7 @@
 
 <script type="text/javascript">
 //<![CDATA[
-var disqus_shortname = 'Comments';
+var disqus_shortname = 'Comme';
 (function() {
 	var s = document.createElement('script'); s.async = true;
 	s.type = 'text/javascript';
