--- a/zh/files/test-note.html
+++ b/zh/files/test-note.html
@@ -25,17 +25,17 @@
 	<meta property="og:url" content="https:/bingcheng.openmc.cn/notes/zh/files/test-note.html"><!-- User defined head content such as meta tags and encoding options -->
 	<title>测试笔记 | 笔记 | 记录灵感</title>
 	
-	<link rel="stylesheet" type="text/css" media="all" href="../../rw_common/themes/lander/consolidated-1.css?rwcache=622865686" />
+	<link rel="stylesheet" type="text/css" media="all" href="../../rw_common/themes/lander/consolidated-1.css?rwcache=622866009" />
 		
 	
 	
 	<!-- Style variations - these are set up in the theme.plist -->
 	<!-- User defined styles -->
 			
-	 <script type="text/javascript" src="../../rw_common/themes/lander/js/jquery.min.js?rwcache=622865686"></script>	  
-     <script type="text/javascript" src="../../rw_common/themes/lander/javascript.js?rwcache=622865686"></script>
-	 <script type="text/javascript" src="../../rw_common/themes/lander/js/box.js?rwcache=622865686"></script>
-	 <script type="text/javascript" src="../../rw_common/themes/lander/js/multithemes.js?rwcache=622865686"></script> 
+	 <script type="text/javascript" src="../../rw_common/themes/lander/js/jquery.min.js?rwcache=622866009"></script>	  
+     <script type="text/javascript" src="../../rw_common/themes/lander/javascript.js?rwcache=622866009"></script>
+	 <script type="text/javascript" src="../../rw_common/themes/lander/js/box.js?rwcache=622866009"></script>
+	 <script type="text/javascript" src="../../rw_common/themes/lander/js/multithemes.js?rwcache=622866009"></script> 
 	 
 	<!-- User defined javascript -->
 	<link rel="alternate" type="application/rss+xml" title="胡炳城的笔记" href="https://bingcheng.openmc.cn/notes/zh/files/feed.xml" />
@@ -83,18 +83,7 @@
 		 <div id="content"><!-- Start content -->
 		   	
 	<div class="blog-archive-entries-wrapper">
-		<div id="unique-entry-id-0" class="blog-entry"><h1 class="blog-entry-title">测试笔记</h1><div class="blog-entry-date">27/09/20 08:34 </div><div class="blog-entry-summary"></div><div class="blog-entry-body"><span style="font:12px PingFangSC-Regular; ">这是一条测试笔记</span><br /><br /><span style="font:12px PingFangSC-Regular; ">随便写点什么</span><div class="blog-entry-comments"><div id="disqus_thread">
-<script type="text/javascript"> var disqus_shortname = '我想说...';
-(function() {
-	var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-	var disqus_identifier = '580873b7330ae4eb339611b41fb55e37';
-	dsq.src = 'https://' + disqus_shortname + '.disqus.com/embed.js';
-	(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-	}());
-</script>
-<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-<a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
-</div></div></div></div>
+		<div id="unique-entry-id-0" class="blog-entry"><h1 class="blog-entry-title">测试笔记</h1><div class="blog-entry-date">27/09/20 08:34 </div><div class="blog-entry-summary"></div><div class="blog-entry-body"><span style="font:12px PingFangSC-Regular; ">这是一条测试笔记</span><br /><br /><span style="font:12px PingFangSC-Regular; ">随便写点什么</span></div></div>
 	</div>
 	
 
