--- a/index_files/Bias-regularization.html
+++ b/index_files/Bias-regularization.html
@@ -30,17 +30,17 @@
 	<meta property="og:url" content="https:/bingcheng.openmc.cn/notes/index_files/Bias-regularization.html"><!-- User defined head content such as meta tags and encoding options -->
 	<title>Bias regularization | Notes | JAZZ UP</title>
 	
-	<link rel="stylesheet" type="text/css" media="all" href="../rw_common/themes/lander/consolidated-0.css?rwcache=622866009" />
+	<link rel="stylesheet" type="text/css" media="all" href="../rw_common/themes/lander/consolidated-0.css?rwcache=622872752" />
 		
 	
 	
 	<!-- Style variations - these are set up in the theme.plist -->
 	<!-- User defined styles -->
 			
-	 <script type="text/javascript" src="../rw_common/themes/lander/js/jquery.min.js?rwcache=622866009"></script>	  
-     <script type="text/javascript" src="../rw_common/themes/lander/javascript.js?rwcache=622866009"></script>
-	 <script type="text/javascript" src="../rw_common/themes/lander/js/box.js?rwcache=622866009"></script>
-	 <script type="text/javascript" src="../rw_common/themes/lander/js/multithemes.js?rwcache=622866009"></script> 
+	 <script type="text/javascript" src="../rw_common/themes/lander/js/jquery.min.js?rwcache=622872752"></script>	  
+     <script type="text/javascript" src="../rw_common/themes/lander/javascript.js?rwcache=622872752"></script>
+	 <script type="text/javascript" src="../rw_common/themes/lander/js/box.js?rwcache=622872752"></script>
+	 <script type="text/javascript" src="../rw_common/themes/lander/js/multithemes.js?rwcache=622872752"></script> 
 	 
 	<!-- User defined javascript -->
 	<link rel="alternate" type="application/rss+xml" title="Bingcheng's Notes" href="https://bingcheng.openmc.cn/notes/index_files/feed.xml" />
@@ -88,7 +88,7 @@
 		 <div id="content"><!-- Start content -->
 		   	
 	<div class="blog-archive-entries-wrapper">
-		<div id="unique-entry-id-0" class="blog-entry"><h1 class="blog-entry-title">Bias regularization</h1><div class="blog-entry-date">27/09/20 08:32 </div><div class="blog-entry-summary">It is not common to regularize the bias parameters because they do not interact with the data through multiplicative interactions, and therefore do not have the interpretation of controlling the influence of a data dimension on the final objective.</div><div class="blog-entry-body"><span style="font:16px PingFangSC-Light; color:#000000;">Source: cs231n  </span><span style="font-size:16px; color:#000000;"><br /><br />As we already mentioned in the Linear Classification section, it is not common to regularize the bias parameters because they do not interact with the data through multiplicative interactions, and therefore do not have the interpretation of controlling the influence of a data dimension on the final objective. However, in practical applications (and with proper data preprocessing) regularizing the bias rarely leads to significantly worse performance. This is likely because there are very few bias terms compared to all the weights, so the classifier can &ldquo;afford to&rdquo; use the biases if it needs them to obtain a better data loss.</span></div></div>
+		<div id="unique-entry-id-0" class="blog-entry"><h1 class="blog-entry-title">Bias regularization</h1><div class="blog-entry-date">27/09/20 08:32 Filed in: <span class="blog-entry-category"><a href="category-machine-learning.html">Machine Learning</a></span></div><div class="blog-entry-summary">It is not common to regularize the bias parameters because they do not interact with the data through multiplicative interactions, and therefore do not have the interpretation of controlling the influence of a data dimension on the final objective.</div><div class="blog-entry-body"><span style="font:16px PingFangSC-Light; color:#000000;">Source: cs231n  </span><span style="font-size:16px; color:#000000;"><br /><br />As we already mentioned in the Linear Classification section, it is not common to regularize the bias parameters because they do not interact with the data through multiplicative interactions, and therefore do not have the interpretation of controlling the influence of a data dimension on the final objective. However, in practical applications (and with proper data preprocessing) regularizing the bias rarely leads to significantly worse performance. This is likely because there are very few bias terms compared to all the weights, so the classifier can &ldquo;afford to&rdquo; use the biases if it needs them to obtain a better data loss.</span><p class="blog-entry-tags">Tags: <a href="tag-regularization.html" title="regularization" rel="tag">regularization</a></p></div></div>
 	</div>
 	
 
@@ -98,7 +98,11 @@
 <div id="sidebarContainer"><!-- Start Sidebar wrapper -->
   <div class="sideHeader"></div><!-- Sidebar header -->
 	 <div id="sidebar"><!-- Start sidebar content -->
-	 <div id="blog-categories"></div><div id="blog-archives"><a class="blog-archive-link-enabled" href="archive-september-2020.html">September 2020</a><br /></div><div id="blog-rss-feeds"><a class="blog-rss-link" href="feed.xml" rel="alternate" type="application/rss+xml" title="Bingcheng's Notes">Bingcheng's Notes</a><br /></div> <!-- sidebar content such as the blog archive links -->
+	 <div id="blog-categories"><a href="category-machine-learning.html" class="blog-category-link-enabled">Machine Learning (2)</a><br /></div><div id="blog-archives"><a class="blog-archive-link-enabled" href="archive-september-2020.html">September 2020</a><br /></div><ul class="blog-tag-cloud"><li><a href="tag-back-propagation.html" title="back propagation" class="blog-tag-size-11" rel="tag">back propagation</a></li>
+<li><a href="tag-regularization.html" title="regularization" class="blog-tag-size-10" rel="tag">regularization</a></li>
+<li><a href="tag-relu.html" title="ReLU" class="blog-tag-size-9" rel="tag">ReLU</a></li>
+</ul>
+<div id="blog-rss-feeds"><a class="blog-rss-link" href="feed.xml" rel="alternate" type="application/rss+xml" title="Bingcheng's Notes">Bingcheng's Notes</a><br /></div> <!-- sidebar content such as the blog archive links -->
 	 <div class="clearer"></div>
 		<!-- sidebar content you enter in the page inspector -->		
      </div><!-- End sidebar content -->
